# sg-preflight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: sg_rules.json  sg_rules_live.json  sg_rules_live_g45.json  sg_rules_live_g65.json
desktop_native/: CMakeLists.txt  README.md
desktop_native/src/: audio_player.cpp  audio_player.hpp  backend_bridge.cpp  backend_bridge.hpp  localization.cpp  localization.hpp  main.cpp  native_shell.rc  prompt.cpp  prompt.hpp  screenshot_capture.cpp  screenshot_capture.hpp  shell_state.cpp  shell_state.hpp  shell_types.hpp  texture_loader.cpp  texture_loader.hpp
desktop_native/src/sgfx_shell/: sgfx_clean_status_menu.cpp  sgfx_diagnostic_overlay.cpp  sgfx_diagnostic_overlay.hpp  sgfx_digest_menu.cpp  sgfx_evidence_summary_menu.cpp  sgfx_main_menu.cpp  sgfx_menu_background.cpp  sgfx_menu_background.hpp  sgfx_menu_base.cpp  sgfx_menu_base.hpp  sgfx_menu_controls_display.cpp  sgfx_menu_controls_display.hpp  sgfx_menu_manager.cpp  sgfx_menu_manager.hpp  sgfx_menu_scrolling.cpp  sgfx_menu_scrolling.hpp  sgfx_menus.hpp  sgfx_quick_actions_menu.cpp  sgfx_settings_menu.cpp  sgfx_shared_resources.cpp  sgfx_shared_resources.hpp  sgfx_shell_app.cpp  sgfx_shell_app.hpp  sgfx_workflow_menu.cpp
docs/: 3d-car-delivery-retro-2026-04-14.md  AGENT_HANDOFF.md  ALPHA_REMAINING_WORK.md  JANA_SYNC_PREP.md  ROADMAP_NEXT.md  SWARD_TO_SGFX_BOUNDARY.md  TEAMS_DAILY_STATUS.md  TEAM_DEMO_PLAN.md  TEAM_FEEDBACK_CAPTURE.md  assumptions-and-decisions.md  bmw-access-integration-checklist.md  cli-overview.md  daily-qa-snapshot-task.md  json-workflow-guide.md  native-alpha-demo-brief.md  next-chat-handoff-prompt-2026-04-14.md  onedrive-folder-analysis-2026-04-13.md  operator-ui-workflow.md  pain-points-derived-from-retro.md  qa-automation-matrix.md  qa-workflow-alignment.md  retro-derived-priorities.md  retro-to-tool-mapping-2026-04-14.md  sg-checker-coverage-matrix.md  sg-preflight-status-2026-04-14.md  source-drop-analysis-2026-04-14.md  teammate-pilot-playbook.md  workspace-audit-2026-04-13.md
scripts/: build_native_shell.ps1  build_sgfx_exe.py  package_native_shell_bundle.ps1  register_daily_3d_car_qa_snapshot_task.ps1  run_daily_3d_car_qa_snapshot.ps1  run_operator_ui.ps1  run_real_g45_smoke.ps1  run_real_g65_smoke.ps1  run_real_live_matrix_smoke.ps1  run_real_sg_smoke.ps1  run_smoke_test.ps1  verify_native_shell.ps1  verify_native_shell_bundle.ps1
sg_preflight/: __main__.py  activity_log.py  assets.py  bmw_delivery.py  bmw_git_readiness.py  bmw_pipeline_auto_fix.py  bmw_pipeline_diagnostics.py  bundle.py  checker_catalog.py  checker_evidence.py  cli.py  config_loader.py  cross_car_comparison.py  daily_digest.py  daily_snapshot.py  delivery_checklist.py  delivery_support_package.py  delivery_workbook_generation.py  dependency_onboarding.py  desktop_notifications.py  exe_entry.py  export_size_analysis.py  feedback_routing.py  full_qa_history.py  full_qa_pass.py  jira_client.py  live_state.py  manual_review.py  mirror_audit.py  models.py  onboarding_assistant.py  operator_handoff.py  profile_change_detection.py  profile_export.py  profile_summary.py  profiles.py  qa_actions.py  qa_hero_readiness.py  quality_hero_report.py  reporting.py  (+20 more)
tests/: __init__.py  operator_helpers.py  test_activity_log.py  test_adapters.py  test_bmw_delivery.py  test_bmw_git_readiness.py  test_bmw_pipeline_auto_fix.py  test_bmw_pipeline_diagnostics.py  test_bmw_pipeline_real_probe.py  test_checker_catalog.py  test_checker_evidence.py  test_cli.py  test_cross_car_comparison.py  test_daily_digest.py  test_daily_snapshot.py  test_dashboard.py  test_delivery_checklist.py  test_delivery_support_package.py  test_delivery_workbook_generation.py  test_demo_safe_alpha.py  test_dependency_onboarding.py  test_desktop.py  test_desktop_notifications.py  test_export_size_analysis.py  test_feedback_routing.py  test_full_qa_pass.py  test_h34_integration_fix.py  test_h35_external_browser_clipboard.py  test_jira_client.py  test_live_profiles.py  test_live_state.py  test_manual_review.py  test_mirror_audit.py  test_native_scaffold.py  (+28 more)
(+68 files in other folders)
