[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sg-preflight"
version = "0.1.0"
description = "Deterministic 3D Car QA preflight checks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "David Erik Garcia Arenas"}
]

[project.scripts]
sg-preflight = "sg_preflight.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sg_preflight*"]
