[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sg-preflight"
version = "0.1.0"
description = "Deterministic 3D Car QA preflight checks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.35,<1",
  "httpx>=0.28,<1",
]
license = {text = "Proprietary - Paradox Cat GmbH internal use only"}
authors = [
  {name = "David Erik Garcia Arenas"}
]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
sg-preflight = "sg_preflight.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sg_preflight*"]

[tool.setuptools.package-data]
sg_preflight = ["templates/*.html", "static/*.css", "static/*.js"]
